objects/tdc_cti__Call_Log__c/tdc_cti__Call_Log__c.object-meta.xml
<CustomObject>
    <label>Call Log</label>
    <nameField>
        <label>Call Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>