objects/tdc_cti__Call_Log__c/fields/tdc_cti__Call_From__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_From__c</fullName>
    <description>This field is used to store the call from number.</description>
    <label>Call From</label>
    <type>Phone</type>
</CustomField>