objects/tdc_cti__Call_Log__c/fields/tdc_cti__Call_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Id__c</fullName>
    <description>This field is used to store the call id.</description>
    <label>Call Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>