objects/tdc_cti__Call_Log__c/fields/tdc_cti__Call_To__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_To__c</fullName>
    <description>This field is used to store the call to number.</description>
    <label>Call To</label>
    <type>Phone</type>
</CustomField>