objects/tdc_cti__Call_Log__c/fields/tdc_cti__IVR__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__IVR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to link the related IVR record.</description>
    <label>IVR</label>
    <referenceTo>tdc_cti__IVR_Number__c</referenceTo>
    <relationshipLabel>Call Logs</relationshipLabel>
    <relationshipName>Call_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>