objects/tdc_cti__Call_Log__c/fields/tdc_cti__Related_Object__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Related_Object__c</fullName>
    <description>This field is used to store the related object API name.</description>
    <label>Related Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>