objects/tdc_cti__Call_Log__c/fields/tdc_cti__Related_object_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Related_object_Id__c</fullName>
    <description>This field is used to store the related record id.</description>
    <label>Related Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>